# recursion-detect.py

./: README.md  setup.cfg  setup.py
recursion_detect/: __init__.py
tests/recursion-detect/examples/: depth.py
