# https://pypi.org/project/setupcfg-generator/
[metadata]
name = recursion-detect
version = 2019.4.13
url = https://github.com/looking-for-a-job/recursion-detect.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = 
	public
	setuptools
packages = 
	recursion_detect
